# F1-StratLab

./: .env.example  .gitignore  .gitmodules  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  INDEX.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  mkdocs.yml  pyproject.toml  release-please-config.json  requirements-docs.txt  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data_issue.md  feature_request.md
.github/workflows/: DeepWiki_API_Analysis_and_Fix_Prompt.md  ci.yml  docs.yml  release-please.yml  update-wiki.yml
app/: components.jsx  home.jsx  main.jsx
configs/: kafka.yaml  logging.yaml  models.yaml
data/: tire_compounds_by_race.json
data/eval/: README.md  mc_dropout_coverage.csv  mc_dropout_coverage.md  nlp_pipeline_cpu.csv  nlp_pipeline_cpu.md  pace_baselines.csv  pace_baselines.md  subagent_latency.csv  subagent_latency.md  threshold_sweep_overtake.csv  threshold_sweep_overtake.md  threshold_sweep_sc.csv  threshold_sweep_sc.md  threshold_sweep_undercut.csv  threshold_sweep_undercut.md  whisper_results.csv  whisper_results.md
data/rag/: fia_known_urls.json
data/rag_eval/: README.md  queries_v1.json  results_v1.md
docs/: 404.md  README.md  agents-api-reference.md  architecture.md  backend-api.md  driver-colors.md  frontend-css-fixes.md  frontend.md  index.html  index.md  robots.txt  setup-and-deployment.md  strategy-pipeline-arcade.md  streamlit-frontend.md
docs/_hooks/: copy_external_images.py
docs/app/: components.jsx  graph.jsx  home.jsx  markdown.jsx  nav.js
docs/arcade/: dashboard.md  quick-start.md
docs/architecture/: index.md
docs/development/: ci-cd-pipeline.md  docs-maintenance.md  index.md
docs/diagrams/: README.md  arcade_3window_architecture.drawio  backend_api.drawio  chat_mcp_flow.drawio  frontend_pages.drawio  multi_agent_flow.drawio  strategy_pipeline_flow.drawio  subprocess_launch_sequence.drawio  system_architecture.drawio  tcp_broadcast_dataflow.drawio
docs/getting-started/: index.md
docs/pages/: arcade-dashboard.md  arcade-quick-start.md  architecture.md  backend-api.md  changelog.md  ci-cd.md  development.md  docs-maintenance.md  getting-started.md  home.md  meet-the-author.md  multi-agent.md  setup.md  simulation.md  streamlit.md  thesis.md
docs/simulation/: overview.md
docs/styles/: docs.css
docs/stylesheets/: extra.css
docs/thesis-results/: index.md
documents/dev_docs/: SIMULATION_GUIDE.md
documents/dev_docs/diagrams/: backend_api.drawio  chat_mcp_flow.drawio  data_pipeline.drawio  docker_deployment.drawio  multi_agent_architecture.drawio  strategy_pipeline_flow.drawio  system_architecture.drawio  tcp_broadcast_dataflow.drawio
documents/images/: README.md
legacy/: requirements_conda_backup.txt
legacy/radio_label/2023/: intent_labeled_data.csv  radio_filtered.csv  radio_labeled_data.csv
notebooks/agents/: N25_pace_agent.ipynb  N26_tire_agent.ipynb  N27_race_situation_agent.ipynb  N28_pit_strategy_agent.ipynb  N29_radio_agent.ipynb  N30B_rag_benchmark.ipynb  N30_rag_agent.ipynb  N31_mc_visualization.ipynb  N31_strategy_orchestrator.ipynb  N32_smoke_test.ipynb  N33_thresholds_and_calibration.ipynb  N34_radio_runner_smoke.ipynb
notebooks/data_engineering/: N01_data_download.ipynb  N02_eda_master.ipynb  N03_circuit_clustering.ipynb  N04_feature_engineering.ipynb
notebooks/nlp/: N17_radio_labeling.ipynb  N18_radio_transcription.ipynb  N19_sentiment_vader.ipynb  N20_bert_sentiment.ipynb  N21_radio_intent.ipynb  N22_ner_models.ipynb  N23_rcm_parser.ipynb  N24_nlp_pipeline.ipynb  N33_radio_dataset_builder.ipynb
notebooks/nlp/outputs/: N21_training_history.json
notebooks/strategy/lap_time_prediction/: N05_laptime_eda.ipynb  N05_plan.md  N06_laptime_model.ipynb
notebooks/strategy/overtake_probability/: N11_overtake_eda.ipynb  N12B_overtake_tcn.ipynb  N12_overtake_model.ipynb
notebooks/strategy/pit_prediction/: N15_pit_duration.ipynb  N16_undercut.ipynb
notebooks/strategy/sc_probability/: N13_sc_eda.ipynb  N14_sc_model.ipynb
notebooks/strategy/tire_degradation/: N07_tiredeg_eda.ipynb  N08_tiredeg_sequence_config.ipynb  N09_tiredeg_tcn.ipynb  N10_tiredeg_compound_finetuning.ipynb  n09_build.md
pages/: agents-api.md  arcade-strategy-pipeline.md  driver-colors.md  getting-started.md  home.md  multi-agent.md  streamlit.md  tags.md
scripts/: README.md  __init__.py  bench_nlp_pipeline_cpu.py  bench_pace_baselines.py  bench_subagent_latency.py  bench_whisper.py  build_radio_dataset.py  build_rag_index.py  debug_agent.py  download_data.py  download_fia_pdfs.py  f1_cli.py  run_simulation_cli.py  run_streamlit.py  upload_radio_corpus.py  verify_drs_zones.py
scripts/bench/: __init__.py  _common.py
scripts/cli/: README.md  __init__.py  pickers.py  runner.py  theme.py
src/agents/: README.md  __init__.py  pace_agent.py  pit_strategy_agent.py  race_situation_agent.py  radio_agent.py  rag_agent.py  strategy_agent.py  strategy_orchestrator.py  tire_agent.py
src/agents/rules/: degradation_rules.py  gap_rules.py  laptime_rules.py  nlp_rules.py
src/arcade/: README.md  __init__.py  app.py  config.py  data.py  launcher.py  main.py  overlays.py  strategy.py  strategy_pipeline.py  stream.py  track.py  views.py
src/arcade/dashboard/: __main__.py  agent_card.py  agent_formatters.py  alerts_feed.py  orchestrator_card.py  pace_chart.py  reasoning_tabs.py  reasoning_view.py  scenario_bars.py  stream_client.py  telemetry_panel.py  telemetry_window.py  theme.py  tire_chart.py  window.py
src/data_extraction/: README.md  __init__.py  extract_radios.ipynb
src/f1_strat_manager/: README.md  __init__.py  data_cache.py  gp_slugs.py
src/nlp/: README.md  radio_runner.py
src/rag/: README.md  __init__.py  retriever.py
src/shared/: README.md
src/simulation/: README.md  __init__.py  __main__.py  race_state_manager.py  replay_engine.py
src/strategy/: README.md
src/vision/: README.md
styles/: tokens.css
tests/: test_agents.py  test_arcade_dashboard_imports.py  test_simulation.py  test_smoke.py
(+19 files in other folders)
