[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-digital-twin"
version = "0.1.0"
description = "Sistema Multi-Agente para Analisis y Estrategia de Carreras F1"
authors = [{name = "Victor"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # ===================
    # CORE DATA
    # ===================
    "fastf1>=3.1.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pyarrow>=14.0.0",

    # ===================
    # ML / DEEP LEARNING
    # ===================
    "xgboost>=1.7.0",
    "scikit-learn>=1.3.0,<1.6.0",
    # torch: install manually with CUDA (see README)
    "pytorch-lightning>=2.0.0",

    # ===================
    # NLP
    # ===================
    "transformers>=4.30.0",
    "openai-whisper>=20230918",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    "tiktoken>=0.5.0",

    # ===================
    # AGENTS / EXPERT SYSTEM
    # ===================
    "experta>=1.9.4",
    # frozendict: install manually after (>=2.4.0 for Python 3.10+)
    "langgraph>=0.0.10",
    "langchain>=0.1.0",

    # ===================
    # COMPUTER VISION
    # ===================
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "pillow>=10.0.0",

    # ===================
    # BACKEND / STREAMING
    # ===================
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0.0",
    "kafka-python>=2.0.2",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",

    # ===================
    # DATABASE
    # ===================
    "qdrant-client>=1.6.0",

    # ===================
    # UI / VISUALIZATION
    # ===================
    "streamlit>=1.28.0",
    "plotly>=5.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # ===================
    # UTILITIES
    # ===================
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.286",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "jupytext>=1.16.0",
]

voice = [
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    "ffmpeg-python>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
