[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-strat-manager"
version = "0.1.1"
description = "Sistema Multi-Agente para Analisis y Estrategia de Carreras F1"
authors = [{name = "Victor"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # ===================
    # CORE DATA
    # ===================
    "fastf1>=3.1.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pyarrow>=14.0.0",
    # ===================
    # ML / DEEP LEARNING
    # ===================
    "xgboost>=1.7.0",
    "scikit-learn>=1.3.0,<1.6.0",
    # torch / torchvision: declared here so `uv sync` resolves them; the
    # CUDA-specific wheel is selected by [tool.uv.sources] below (cu128 on
    # Windows/Linux, CPU wheel on macOS). pip users hit the default PyPI
    # wheel and should install the CUDA build manually before `pip install -e .`.
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "pytorch-lightning>=2.0.0",
    # ===================
    # NLP
    # ===================
    "transformers>=4.30.0",
    # Explicit dep even though transformers pulls it transitively — the
    # first-run data cache (src/f1_strat_manager/data_cache.py) imports
    # huggingface_hub.snapshot_download directly and needs a version with
    # local_dir + allow_patterns support (>=0.20).
    "huggingface_hub>=0.20",
    "sentencepiece>=0.1.99",
    "openai-whisper>=20230918",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
    "tiktoken>=0.5.0",
    # ===================
    # AGENTS / EXPERT SYSTEM
    # ===================
    "experta>=1.9.4",
    # frozendict: install manually after (>=2.4.0 for Python 3.10+)
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    # ===================
    # COMPUTER VISION
    # ===================
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "pillow>=10.0.0",
    # ===================
    # BACKEND / STREAMING
    # ===================
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0.0",
    "kafka-python>=2.0.2",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    # ===================
    # DATABASE
    # ===================
    "qdrant-client>=1.6.0",
    # ===================
    # UI / VISUALIZATION
    # ===================
    "streamlit>=1.28.0",
    "plotly>=5.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # ===================
    # UTILITIES
    # ===================
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "optuna>=4.7.0",
    "catboost>=1.2.10",
    "librosa>=0.11.0",
    "nltk>=3.9.3",
    "gliner>=0.2.25",
    "onnxruntime<1.24",
    "setfit>=1.1.3",
    "seqeval>=1.2.2",
    "fitz>=0.0.1.dev2",
    "bs4>=0.0.2",
    "langchain-openai>=1.1.11",
    "rich>=14.3.3",
]

[project.scripts]
f1-strat = "scripts.f1_cli:main"
f1-sim   = "scripts.run_simulation_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.286",
    "mypy>=1.0.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "jupytext>=1.16.0",
]

voice = [
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    "ffmpeg-python>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ── uv: PyTorch CUDA wheel routing ────────────────────────────────────────
# `uv sync` reads these blocks and pulls torch / torchvision from the right
# index per platform: cu128 on Windows + Linux (NVIDIA RTX 40/50 series),
# CPU on macOS (no CUDA). Plain pip ignores these tables, so pip users still
# need to install torch manually with the matching wheel before `pip install -e .`.
# Override CUDA version by editing the URL or adding a new [[tool.uv.index]] block.
[[tool.uv.index]]
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu",   marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu",   marker = "sys_platform == 'darwin'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
exclude = [
    "legacy/",
    ".nb_py/",
    "notebooks/",
    "src/agents/",
    "src/nlp/",
    "src/data_extraction/",
    "src/strategy/",
    "src/telemetry/",
    "src/vision/",
    "src/shared/",
    ".venv/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false
explicit_package_bases = true
exclude = ["legacy/", ".nb_py/", "notebooks/", "src/agents/", "src/nlp/", "src/data_extraction/", "src/strategy/", "src/telemetry/", "src/vision/", "src/shared/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
